--- a/DCD/JavaScriptwithNode/CoffeeMachine/package.json
+++ b/DCD/JavaScriptwithNode/CoffeeMachine/package.json
@@ -9,7 +9,9 @@
   },
   "author": "Ikram Maulana",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
     "jest": "^27.1.1"
   }
