--- a/DCD/javascript-projects/notes-app-back-end/package.json
+++ b/DCD/javascript-projects/notes-app-back-end/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.2.0"
+    "@hapi/hapi": "^20.2.0",
+    "nanoid": "^3.1.28"
   }
 }
